--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -4,8 +4,8 @@
   img.header-image{
     display: block;
     margin-left: auto;
-    margin-right: auto
-
+    margin-right: auto;
+    /*max-height: 300px;*/
   }
 
   .bio-message{
@@ -25,6 +25,12 @@
   -ms-transform:translate(-50%,-50%);
   -webkit-transform:translate(-50%,-50%);
   transform:translate(-50%,-50%);
+}
+
+
+.no-bullet{
+  list-style-type: none;
+
 }
 
 
